# libelf-rs

./: Cargo.toml  README.md  build.rs
include/: elf.h  gelf.h  libelf.h
src/: error.rs  handle.rs  lib.rs  types.rs
src/read/: elf_api.rs  gelf_api.rs  mod.rs
src/write/: elf_api.rs  mod.rs
tests/: Makefile  elf.dict
