[package]
name = "libelf-rs"
version = "0.1.0"
edition = "2024"
description = "Drop-in replacement for libelf using the object crate"
license = "MIT OR LGPL-2.1-only"
links = "libelf-rs"
repository = "https://github.com/DavidVentura/libelf-rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "write", "elf"] }
memmap2 = "0.9"

[build-dependencies]

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
